--- a/index.html
+++ b/index.html
@@ -61,6 +61,6 @@
     <tr>
           </tr>
   </table>
-  <img src="my-web/원격접속.png" alt="원격접속 이미지" width="200">
+  <img src="원격접속.png" alt="원격접속 이미지" width="200">
 </body>
 </html>
