--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="ko">
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>안녕하세요</title>
   <style>
     body {
@@ -40,7 +41,7 @@
   </style>
 </head>
 <body>
-  <h1>📁 </h1>
+  <h1>📁 링크 모음</h1>
   <table>
     <tr>
       <th>서비스명</th>
@@ -51,15 +52,13 @@
       <td><a href="https://login.office.hiworks.com/silla-miso.com" target="_blank">hiworks.com</a></td>
     </tr>
     <tr>
-      <td>원격RustDesk</td>
+      <td>원격 RustDesk</td>
       <td><a href="https://github.com/j1k2l3/welcome/raw/refs/heads/main/%EC%9B%90%EA%B2%A9rustdesk-1.2.3-2-x86_64.exe" target="_blank">rustdesk.com</a></td>
     </tr>
     <tr>
       <td>Google Drive</td>
       <td><a href="https://lock.pub/n1uLHEoz5i" target="_blank">drive.google.com</a></td>
     </tr>
-    <tr>
-          </tr>
   </table>
   <img src="원격접속.png" alt="원격접속 이미지" width="800">
 </body>
