--- a/index.html
+++ b/index.html
@@ -61,5 +61,43 @@
     </tr>
   </table>
   <img src="원격접속.png" alt="원격접속 이미지" width="800">
+  <script>
+  (function() {
+    var w = window;
+    if (w.ChannelIO) {
+      return (w.console.error || console.error)("ChannelIO script included twice.");
+    }
+    var ch = function() {
+      ch.c(arguments);
+    };
+    ch.q = [];
+    ch.c = function(args) {
+      ch.q.push(args);
+    };
+    w.ChannelIO = ch;
+    function l() {
+      if (w.ChannelIOInitialized) return;
+      w.ChannelIOInitialized = true;
+      var s = document.createElement("script");
+      s.type = "text/javascript";
+      s.async = true;
+      s.src = "https://cdn.channel.io/plugin/ch-plugin-web.js";
+      var x = document.getElementsByTagName("script")[0];
+      x.parentNode.insertBefore(s, x);
+    }
+    if (document.readyState === "complete") {
+      l();
+    } else if (window.attachEvent) {
+      window.attachEvent("onload", l);
+    } else {
+      window.addEventListener("load", l, false);
+    }
+  })();
+
+  ChannelIO('boot', {
+    "pluginKey": "1bde6a17-b606-46f6-b523-5f75b50c9f0e"
+  });
+</script>
+
 </body>
 </html>
