--- a/index.html
+++ b/index.html
@@ -42,23 +42,21 @@
     }
   </style>
 </head>
-  <script> 
-async function updateRustDeskLink() { 
-try { 
-const response = await fetch("https://api.github.com/repos/rustdesk/rustdesk/releases/latest"); 
-const data = await response.json(); // 
+  <script>
+  async function updateRustDeskLink() {
+    const response = await fetch("https://api.github.com/repos/rustdesk/rustdesk/releases/latest");
+    const data = await response.json();
 
-Windows용 exe 파일 찾기 
-const winAsset = data.assets.find(a => a.name.includes("windows") && a.name.endsWith(".exe")); 
-if (winAsset) { 
-document.getElementById("rustdesk-windows").href = winAsset.browser_download_url; 
-} 
-} catch (error) { 
-console.error("RustDesk 링크 업데이트 실패:", error); 
-} 
-} 
-updateRustDeskLink(); 
+    // Windows용 exe 파일 찾기
+    const winAsset = data.assets.find(a => a.name.includes("windows") && a.name.endsWith(".exe"));
+    if (winAsset) {
+      document.getElementById("rustdesk-windows").href = winAsset.browser_download_url;
+    }
+  }
+
+  updateRustDeskLink();
 </script>
+
 <body>
   <h1>📁 링크 모음</h1>
   <table>
@@ -72,7 +70,7 @@ updateRustDeskLink();
     </tr>
     <tr>
       <td>원격 RustDesk</td>
-      <td><a id="rustdesk-windows" href="https://github.com/j1k2l3/welcome/raw/refs/heads/main/%EC%9B%90%EA%B2%A9rustdesk-1.2.3-2-x86_64.exe" target="_blank">rustdesk.com</a></td>
+      <td><a id="rustdesk-windows" href="#" target="_blank">rustdesk.com</a></td>
     </tr>
     <tr>
       <td>Google Drive</td>
