--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
     </tr>
     <tr>
       <td>원격 RustDesk</td>
-      <td><a id="rustdesk-windows" href="#" target="_blank">rustdesk.com</a></td>
+      <td><a id="rustdesk-windows" href="https://github.com/rustdesk/rustdesk/releases" target="_blank">rustdesk.com</a></td>
     </tr>
     <tr>
       <td>Google Drive</td>
