--- a/index.html
+++ b/index.html
@@ -56,6 +56,36 @@
 
   updateRustDeskLink();
 </script>
+<script>
+  async function updateRustDeskLink() {
+    const response = await fetch("https://api.github.com/repos/rustdesk/rustdesk/releases/latest");
+    const data = await response.json();
+
+    // Windows 64bit exe 파일 찾기
+    const winAsset = data.assets.find(a =>
+      a.name.includes("windows") &&
+      a.name.includes("x86_64") &&
+      a.name.endsWith(".exe")
+    );
+
+    if (winAsset) {
+      const link = document.getElementById("rustdesk-windows");
+
+      // 클릭 이벤트 덮어쓰기 → 클릭하면 자동 다운로드
+      link.addEventListener("click", function(e) {
+        e.preventDefault(); // 기존 링크 이동 막기
+        const a = document.createElement("a");
+        a.href = winAsset.browser_download_url;
+        a.download = winAsset.name;
+        document.body.appendChild(a);
+        a.click(); // 자동 클릭으로 다운로드 시작
+        document.body.removeChild(a);
+      });
+    }
+  }
+
+  updateRustDeskLink();
+</script>
 
 <body>
   <h1>📁 링크 모음</h1>
